--- a/apmis-flow/frontend/themes/my-theme/components/vaadin-button.css
+++ b/apmis-flow/frontend/themes/my-theme/components/vaadin-button.css
@@ -4,7 +4,8 @@
   box-shadow: inset 0 0 0 1px var(--lumo-contrast-20pct);
 }
 :host(:not([theme~="tertiary"]):not([theme~="primary"]):not([theme~="error"]):not([theme~="success"])) {
-  color: var(--lumo-body-text-color);
+  color: white;
+     background: #0D6938;
 }
 :host([focus-ring]:not([theme~="tertiary"])) {
   box-shadow: 0 0 0 2px var(--lumo-primary-color-50pct), inset 0 0 0 1px var(--lumo-primary-color);
