--- a/apmis-flow/frontend/themes/apmis-theme/styles.css
+++ b/apmis-flow/frontend/themes/apmis-theme/styles.css
@@ -1,7 +1,7 @@
 @import url('./main-layout.css');
 
-html {
-      --lumo-primary-color: rgb(0, 143, 62);
+/* html {
+      --lumo-primary-color: #0D6938;
       --lumo-primary-color-50pct: rgba(240, 143, 62, 0.5);
       --lumo-primary-color-10pct: rgba(240, 143, 62, 0.1);
       --lumo-shade: hsl(208, 0%, 43%);
@@ -49,5 +49,58 @@ html {
       --lumo-space-s: 0.75rem;
       --lumo-space-xs: 0.375rem;
 
-    }
+    } */
 
+@font-face {
+  font-family: "Lato";
+  src: url('../fonts/lato-black.woff');
+}
+
+.application-logo {
+  background-image: url('./img/logo.png');
+}
+   
+html{
+	--lumo-primary-color: #0D6938;
+	--lumo-primary-text-color: #FFFFFF;
+	--lumo-primary-contrast-color: #FFFFFF;
+	--lumo-contrast-10pct: #E0F0E0;
+	--lumo-contrast-20pct: #81CBA5;
+	--lumo-contrast-30pct: #475B51;
+	--lumo-contrast-60pct: #FFFFFF;
+	--lumo-contrast-70pct: #F08F3E;
+	--lumo-contrast-50pct: #FFFFFF;
+	--lumo-contrast-90pct: #F08F3E;
+	--lumo-primary-color-50pct: #0D6938;
+	--lumo-error-color: #C83000;
+	--lumo-error-color-10pct: #FFCCCC;
+	--lumo-success-color: #0D6938;
+	--lumo-tertiary-text-color: #FFFFFF;
+	--lumo-header-text-color: #0D6938;
+	--lumo-body-text-color: #000000;
+	--lumo-border-radius-l: 6px;
+	--lumo-border-radius-m: 4px;
+	--lumo-border-radius-s: 4px;
+	--lumo-box-shadow-xl: hsla(0, 0%, 0%, 0.12);
+	--lumo-box-shadow-l: hsla(0, 0%, 0%, 0.05);
+	--lumo-box-shadow-m: hsla(0, 0%, 0%, 0);
+	--lumo-box-shadow-s: hsla(0, 0%, 0%, 0);
+	--lumo-box-shadow-xs: hsla(0, 0%, 0%, 0);
+	--lumo-secondary-text-color:  #FFFFFF;
+	--vaadin-app-layout-drawer-width: 10%;
+} 
+
+vaadin-tabs[orientation="horizontal"]{
+	background-color: #434343;
+	color:  #FFFFFF;
+	padding: 0;
+	margin: 0;
+}
+  
+.tabs{
+	
+}   
+
+:host([part='drawer']){
+	width: 20px;
+}
