--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -20,6 +20,15 @@ vaadin-app-layout[primary-section="drawer"]:not([overlay])::part(drawer)
 	z-index: 1;
 }
 
+rect {
+	stroke:none;
+	fill: white;
+}
+
+.card-header-tab {
+	display: none !important;
+}
+
 vaadin-drawer-toggle[slot="navbar"] {
 	color: white;
 }
@@ -142,6 +151,8 @@ vcf-nav-item#navitem {
 	font-weight: 300 !important;
 }
 
+
+
 vcf-nav-item#navitem vaadin-icon {
 	height: 15px;
 }
@@ -169,7 +180,11 @@ vcf-nav-item#navitem:hover, vcf-nav-item#navitem:focus-visible {
 	text-shadow: none !important;
 }
 
-vcf-nav-item#navitem:active, #menuItems:active {
+vaadin-vertical-layout {
+    padding: 0 !important;
+}
+
+vcf-nav-item#navitem:active, vcf-nav-item#menuItems:active {
 	background: #F08F3E !important;
 	color: white !important;
 }
@@ -292,9 +307,15 @@ a {
 	.col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1,
 	.col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4,
 	.col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
-	padding-left: 0px !important;
-	padding-right: 0px !important;
+	
 }
+
+body{
+	background: #f1f4f6;
+}
+
+
+
 
 vaadin-icon {
 	color: white !important;
@@ -358,3 +379,63 @@ vaadin-input-container {
 #navbarTop {
 	border-bottom: 1px solid #c9c9c9 !important;
 }
+
+.card{
+	border: none;
+
+}
+
+
+
+
+.highcharts-figure,
+.highcharts-data-table table {
+    min-width: 310px;
+    max-width: 800px;
+    margin: 1em auto;
+}
+
+#container {
+    height: 400px;
+}
+
+.highcharts-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #ebebeb;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
+
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+
+.highcharts-data-table th {
+    font-weight: 600;
+    padding: 0.5em;
+}
+
+.highcharts-data-table td,
+.highcharts-data-table th,
+.highcharts-data-table caption {
+    padding: 0.5em;
+}
+
+.highcharts-data-table thead tr,
+.highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
+}
+
+text.highcharts-credits {
+    display: none !important;
+}
+
