--- a/sormas-ui/src/main/webapp/VAADIN/themes/sormas/layouts/about.html
+++ b/sormas-ui/src/main/webapp/VAADIN/themes/sormas/layouts/about.html
@@ -5,6 +5,10 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+	integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+	crossorigin="anonymous">
 <title>About APMIS</title>
 <style type="text/css">
 @media ( max-width : 600px) {
@@ -27,28 +31,66 @@
 		margin-right: 0px !important;
 	}
 }
+
+.dropdown, .dropdown-center, .dropend, .dropstart, .dropup,
+	.dropup-center {
+	position: relative;
+}
+
+.dropbtn {
+	background-color: #4CAF50;
+	color: white;
+	padding: 10px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.dropdown-content a:hover {
+	background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
 </style>
 
 </head>
 
 <body>
 	<div class="about-container" style="">
-		
+
 		<div class="about-body">
 			<div class="about-desc" style="margin-bottom: 50px;">
-				<h1 style="margin-bottom: 8vh;">About APMIS</h1>
-				<p style="font-size: 25px; word-wrap: normal;">About
-APMIS (Afghanistan Polio Management Information System) is an supplemental Immunization Activities management system to manage the vaccination activities in the country.
-					 <p style="font-size: 25px; word-wrap: normal;">Select either of the Documentations provided to access the Afghanistan
-					Polio Management Information System(APMIS) guides. 
-					 </p>
+				
+				<p style="font-size: 25px; word-wrap: normal;">About APMIS
+					(Afghanistan Polio Management Information System) is an
+					supplemental Immunization Activities management system to manage
+					the vaccination activities in the country.
+				<p style="font-size: 25px; word-wrap: normal;">Select either of
+					the Documentations provided to access the Afghanistan Polio
+					Management Information System(APMIS) guides.</p>
 			</div>
 			<div class="about-nav">
 				<div class="guides">
 					<div class="guide-container"
-						style=" display: flex;
-    justify-content: center;
-   ">
+						style="display: flex; justify-content: center;">
 						<ol
 							style="padding: 20px; display: flex; padding: 16px; list-style: none;">
 							<li style="margin-bottom: 5px; float: left;"><a
@@ -59,15 +101,42 @@ APMIS (Afghanistan Polio Management Information System) is an supplemental Immun
 								href="/sormas-ui/VAADIN/themes/sormas/img/APMIS_Technical_Manual.pdf"
 								style="color: green; font-size: 14px; display: block; padding: 16px;">Technical
 									Guide</a></li>
+
+							<li style="margin-bottom: 5px;"><a
+								href="/sormas-ui/VAADIN/themes/sormas/img/Apmis_MobileUser_Guide.pdf"
+								style="color: green; font-size: 14px; display: block; padding: 16px;">Mobile
+									User Guide</a></li>
+									
+									
+							<!-- ol
+								style=" display: flex; list-style: none; flex-direction: column;">
+								<li style="margin-bottom: 5px; float: left;"><a
+									href="/sormas-ui/VAADIN/themes/sormas/img/APMIS_User_Guide.pdf"
+									style="color: green; font-size: 14px; display: block; padding: 16px;">User
+										Guide</a></li>
+								<li style="margin-bottom: 5px;"><a
+									href="/sormas-ui/VAADIN/themes/sormas/img/APMIS_Technical_Manual.pdf"
+									style="color: green; font-size: 14px; display: block; padding: 16px;">Technical
+										Guide</a></li>
+
+								<li style="margin-bottom: 5px;"><a
+									href="/sormas-ui/VAADIN/themes/sormas/img/APMIS_Technical_Manual.pdf"
+									style="color: green; font-size: 14px; display: block; padding: 16px;">Technical
+										Guide</a></li>
+
+								
+
+
+							</ol-->
+
 						</ol>
-						
+
 					</div>
 				</div>
-			
+
 			</div>
 		</div>
 	</div>
-
+	
 </body>
 
-</html>
