-ui review prep

--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -20,6 +20,11 @@ vaadin-app-layout[primary-section="drawer"]:not([overlay])::part(drawer)
 	z-index: 1;
 }
 
+rect {
+	stroke:none;
+	fill: white;
+}
+
 .card-header-tab {
 	display: none !important;
 }
