--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -518,3 +518,17 @@ vaadin-text-field.searchField {
 	margin-right: 10px;
 
 }
+
+.exportJsonGLoss{
+	background: #0D6938 !important;
+	color: white !important;
+    padding: 3px;
+    font-weight: 600;
+    border-radius: 5px;
+    height: 2.2em;
+    margin-top: 6px;
+    padding-left : 15px;
+        padding-right : 15px;
+    
+	
+}
