Create new user form, edit user form styled and user view upadted #202

--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -496,3 +496,8 @@ vaadin-text-field.searchField {
 	width: 20%;
 	margin-right: 10px;
 }
+
+.contact-form {
+	margin-left: 30px;
+	margin-right: 30px;
+}
