--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -520,16 +520,14 @@ vaadin-text-field.searchField {
 }
 
 .exportJsonGLoss{
-	background: #0D6938 !important;
-	color: white !important;
-    padding: 3px;
+    padding: 3px 15px;
     font-weight: 600;
     border-radius: 5px;
-    height: 2.2em;
+    height: 2.3em;
     margin-top: 6px;
-    padding-left : 15px;
-        padding-right : 15px;
-    
+    background: rgb(13, 105, 56) !important;
+    color: white !important;
+    width: 7em;
 	
 }
 
