--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -536,3 +536,8 @@ vaadin-text-field.searchField {
 vaadin-horizontal-layout[fcgh-footer] {
   background-color: green;
 }
+
+.custom-dialog {
+    width: 385px;
+
+}
