- implementing configurations units #202

--- a/apmis-flow/frontend/themes/apmis-theme/components/@vaadin-component-factory/vcf-nav/vcf-nav-item.css
+++ b/apmis-flow/frontend/themes/apmis-theme/components/@vaadin-component-factory/vcf-nav/vcf-nav-item.css
@@ -1,4 +1,47 @@
- :host {
+import { html, css, LitElement } from 'lit';
+import { customElement, property, query } from 'lit/decorators.js';
+import '@vaadin/vaadin-lumo-styles/color.js';
+import '@vaadin/vaadin-lumo-styles/typography.js';
+import '@vaadin/vaadin-lumo-styles/sizing.js';
+import '@vaadin/vaadin-lumo-styles/spacing.js';
+import '@vaadin/vaadin-lumo-styles/style.js';
+import '@vaadin/vaadin-lumo-styles/font-icons.js';
+
+@customElement('vcf-nav-item')
+export class NavItem extends LitElement {
+  @property()
+  path = '';
+
+  @property({ type: Boolean, reflect: true })
+  expanded = false;
+
+  @property({ type: Boolean, reflect: true })
+  active = false;
+
+  @query('button')
+  button: HTMLElement | undefined;
+
+  @query('#children')
+  childrenSlot: HTMLElement | undefined;
+
+  connectedCallback() {
+    super.connectedCallback();
+    this.setAttribute('role', 'listitem');
+    this._updateActive();
+    // @ts-ignore
+    this.__boundUpdateActive = this._updateActive.bind(this);
+    // @ts-ignore
+    window.addEventListener('popstate', this.__boundUpdateActive);
+  }
+
+  disconnectedCallback() {
+    super.disconnectedCallback();
+    // @ts-ignore
+    window.removeEventListener('popstate', this.__boundUpdateActive);
+  }
+
+  static styles = css`
+    :host {
       display: block;
     }
 
@@ -13,7 +56,7 @@
       align-items: center;
       gap: var(--lumo-space-xs);
       text-decoration: none;
-      color: white;
+      color: inherit;
       font: inherit;
       padding: var(--lumo-space-s);
       padding-inline-start: calc(var(--lumo-space-s) + var(--_child-indent, 0px));
@@ -96,7 +139,7 @@
     }
 
     a:active {
-      color:white;
+      color: white !important;
     }
 
     slot[name='prefix'],
@@ -141,5 +184,51 @@
 
     :host([active]) a {
       color: white;
-      background-color: red;
+      background-color: var(--lumo-primary-color-10pct);
     }
+  `;
+
+  render() {
+    return html`
+      <a href="${this.path}" part="item" aria-current="${this.active ? 'page' : false}">
+        <slot name="prefix"></slot>
+        <slot></slot>
+        <slot name="suffix"></slot>
+        <button
+          part="toggle-button"
+          @click="${this.toggleExpanded}"
+          ?hidden="${!this.querySelector('[slot=children]')}"
+          aria-controls="children"
+          aria-expanded="${this.expanded}"
+          aria-label="Toggle child items"></button>
+      </a>
+      <slot name="children" role="list" part="children" id="children" ?hidden="${!this.expanded}"></slot>
+    `;
+  }
+
+  toggleExpanded(e: MouseEvent) {
+    e.preventDefault();
+    e.stopPropagation();
+    this.expanded = !this.expanded;
+  }
+
+  _updateActive() {
+    const hasBaseUri = (document.baseURI != document.location.href);
+    const pathAbsolute = this.path.startsWith("/");
+    if (hasBaseUri && !pathAbsolute) {
+      const pathRelativeToRoot = document.location.pathname;
+      const basePath = new URL(document.baseURI).pathname;
+      const pathWithoutBase = pathRelativeToRoot.substring(basePath.length);
+      const pathRelativeToBase = (basePath !== pathRelativeToRoot && pathRelativeToRoot.startsWith(basePath)) ? pathWithoutBase : pathRelativeToRoot;
+      this.active = pathRelativeToBase === this.path;
+    } else {
+      // Absolute path or no base uri in use. No special comparison needed
+      this.active = document.location.pathname == this.path;
+    }
+    this.toggleAttribute('child-active', document.location.pathname.startsWith(this.path));
+
+    if (this.active) {
+      this.expanded = true;
+    }
+  }
+}
