--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -541,3 +541,8 @@ vaadin-horizontal-layout[fcgh-footer] {
     width: 385px;
 
 }
+
+:host(:not([theme~="tertiary"]):not([theme~="primary"]):not([theme~="error"]):not([theme~="success"])) {
+    color: white;
+    background: none!important;
+}
