--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -466,8 +466,8 @@ vcf-nav-item::part(item) {
 	color: white;
 }
 
-#forgotPasswordButton{
-	color: #0D6938 !important;
+#forgotPasswordButton {
+	color: green !important;
 } 
 
 .vieLangiuageSwitcher  vaadin-button {
@@ -541,7 +541,7 @@ vaadin-dialog-overlay.dialog-alignment::part(header) {
     margin-top: 6px;
     background: rgb(13, 105, 56) !important;
     color: white !important;
-    width: 28%;
+    width: 17%;
 	
 }
 
@@ -608,7 +608,7 @@ vaadin-horizontal-layout[fcgh-footer] {
 }
 
 #exportCluster{
-	width: 140px;
+	width: 100px;
     margin-bottom: 6px;
 }
 
