--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -603,7 +603,12 @@ vaadin-horizontal-layout[fcgh-footer] {
 }
 
 #exportArea{
-	width: 135px;
+	width: 100px;
+    margin-bottom: 6px;
+}
+
+#exportProvince{
+	width: 100px;
     margin-bottom: 6px;
 }
 
