- Activating Grid Pointer Feature #202 - Updating System User Rights in Campaign, Users, UsersForm, Configuration #202 - Report in completeness analysis not accurate #432 #202 - #449 #202Province Filter in Aggregate Report

--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -654,3 +654,12 @@ a:hover {
 }
 }
 
+
+vaadin-checkbox.custom-checkbox-class{
+	border: 1px solid green;
+}
+
+vaadin-checkbox.custom-checkbox-class label{
+	margin-bottom: 0px !important;
+}
+
