--- a/apmis-flow/frontend/themes/apmis-theme/components/vaadin-grid.css
+++ b/apmis-flow/frontend/themes/apmis-theme/components/vaadin-grid.css
@@ -5,6 +5,7 @@
       flex: 1 1 auto;
       align-self: stretch;
       position: relative;
+      cursor: pointer;
     }
 
     :host([hidden]) {
@@ -54,6 +55,7 @@
       outline: none;
       /* Workaround for a Desktop Safari bug: new stacking context here prevents the scrollbar from getting hidden */
       z-index: 0;
+      cursor: pointer;
     }
 
     #header,
@@ -95,6 +97,7 @@
       width: 100%;
       left: 0;
       overflow: visible;
+      cursor: pointer;
     }
 
     [part~='row'] {
@@ -106,6 +109,8 @@
 
     [part~='row'][loading] [part~='body-cell'] ::slotted(vaadin-grid-cell-content) {
       opacity: 0;
+            cursor: pointer;
+      
     }
 
     #items [part~='row'] {
@@ -153,6 +158,7 @@
       box-sizing: border-box;
       overflow: hidden;
       text-overflow: ellipsis;
+      cursor: pointer;
     }
 
     [hidden] {
@@ -164,3 +170,5 @@
       z-index: 2;
       will-change: transform;
     }
+    
+    
