#New UI Refactoring

--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -654,3 +654,11 @@ a:hover {
 }
 }
 
+vaadin-dialog-overlay.formI{
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    outline: 0px solid transparent;
+}
+
