--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -670,3 +670,7 @@ vaadin-checkbox.custom-checkbox-class label{
 	margin-bottom: 0px !important;
 }
 
+vaadin-checkbox.custom-checkbox-class:checked {
+   background-color: aquamarine;
+}
+
