--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -686,7 +686,14 @@ vaadin-button#lougoutButton:hover {
 	   opacity: 1 !important;
 	  background: rgb(109, 93, 79) !important;
   box-shadow: none !important;
+}
+
 vaadin-checkbox.custom-checkbox-class:checked {
    background-color: aquamarine;
+}
+
+.selected-row{
+	   background-color: green !important;
+	
 }
 
