# WARNING: head commit changed in the meantime
Merge branch 'development' of https://github.com/xlg8/APMIS-Project.git
into development

--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -649,13 +649,12 @@ vaadin-button:hover {
    }
    
 
-@media (hover: hover) {
 a:hover {
     color: white!important;
 }
-}
 
-vaadin-dialog-overlay.formI{
+
+vaadin-dialog-overlay.form{
     top: 0px;
     right: 0px;
     bottom: 0px;
