--- a/sormas-app/app/src/main/res/layout/fragment_settings_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_settings_layout.xml
@@ -149,6 +149,15 @@
                 />
 
             <TextView
+                android:id="@+id/apmis_release_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="16dp"
+                style="@style/DarkColorStyle"
+                />
+
+            <TextView
                 android:id="@+id/sormas_version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
