--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -700,3 +700,19 @@ vaadin-checkbox.custom-checkbox-class:checked {
 	margin-left: 20px;
 	margin-right: 20px;
 }
+
+.dialog-headers{
+	display : flex;
+	width : 100%;
+}
+
+.headingText{
+	margin : 0px;
+	width : 100%;
+}
+
+.close-icon-dialog{
+	color: red !important;
+	align-self : center;
+	font-size :  9px
+}
