--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -696,7 +696,8 @@ vaadin-checkbox.custom-checkbox-class:checked {
 	
 }
 
+/*
 .uibuilderview {
-	margin-left: 20px;
-	margin-right: 20px;
-}
+	
+} 
+*/
