production server patch

--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -716,3 +716,7 @@ vaadin-checkbox.custom-checkbox-class:checked {
 	align-self : center;
 	font-size :  9px
 }
+
+.toggle-button-group[invalid] {
+    background-color: #ffe5e5;
+}
