- Configuring filters based on user levels

--- a/apmis-flow/frontend/styles/custom-grid-styles.css
+++ b/apmis-flow/frontend/styles/custom-grid-styles.css
@@ -3,3 +3,11 @@
     color: black;
     /*color: rgb(13, 105, 56) !important;*/
 }
+
+[part~="cell"].isDistictLevelData {
+    /*background: rgb(255, 240, 227) !important ;*/
+  /*color: black;*/
+ /*  color: rgb(13, 105, 56) !important;*/
+}
+
+
