--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -720,3 +720,7 @@ vaadin-checkbox.custom-checkbox-class:checked {
 .toggle-button-group[invalid] {
     background-color: #ffe5e5;
 }
+
+tfoot#footer {
+      display: none;
+    }
