--- a/apmis-flow/frontend/styles/custom-grid-styles.css
+++ b/apmis-flow/frontend/styles/custom-grid-styles.css
@@ -10,4 +10,13 @@
  /*  color: rgb(13, 105, 56) !important;*/
 }
 
+.full-width-column {
+    transition: width 0.3s;
+}
+
+/* Adjust width when column is hovered */
+.full-width-column:hover {
+    width: 100%;
+}
+
 
