fix: premliminary fix for #359 and #360

--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -724,3 +724,8 @@ vaadin-checkbox.custom-checkbox-class:checked {
 tfoot#footer {
       display: none;
     }
+    
+
+#formbuildertab vaadin-tabs{
+	background: rgb(67, 67, 67) !important;
+}
