--- a/sormas-app/app/src/main/res/menu/drawer_main_menu.xml
+++ b/sormas-app/app/src/main/res/menu/drawer_main_menu.xml
@@ -23,14 +23,15 @@
     <group
         android:checkableBehavior="single">
 
-        <item
-            android:id="@+id/menu_item_dashboard"
-            android:title="@string/main_menu_dashboard"
-            android:icon="@drawable/ic_drawer_user_dashboard_blue_36dp"
-            android:orderInCategory="1"
-            />
+<!--        <item-->
+<!--            android:id="@+id/menu_item_dashboard"-->
+<!--            android:title="@string/main_menu_dashboard"-->
+<!--            android:icon="@drawable/ic_drawer_user_dashboard_blue_36dp"-->
+<!--            android:orderInCategory="1"-->
+<!--            android:visibility="gone"-->
+<!--            />-->
 
-        <item
+        <!--item
             android:id="@+id/menu_item_tasks"
             android:title="@string/main_menu_tasks"
             android:icon="@drawable/ic_drawer_user_task_blue_36dp"
@@ -78,7 +79,7 @@
             app:actionLayout="@layout/drawer_main_menu_notification_counter"
             />
 
-        <!--item
+
             android:id="@+id/menu_item_immunizations"
             android:title="@string/main_menu_immunizations"
             android:textSize="16sp"
@@ -93,12 +94,12 @@
             android:orderInCategory="9"
             />
 
-        <item
+        <!--item
             android:id="@+id/menu_item_reports"
             android:title="@string/main_menu_reports"
             android:icon="@drawable/ic_drawer_assessment_blue_36dp"
             android:orderInCategory="10"
-            />
+            /-->
 
     </group>
 </menu>
