- imlemrnting solutions for #661, #660, #656, #651, #646, #653

--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -727,3 +727,10 @@ tfoot#footer {
 	font-family: Lato;
 	color: green !important;
 }
+
+.customTextWrap label{
+	white-space: normal;
+    overflow: visible;
+    text-overflow: clip;
+    text-wrap: balance;
+}
