- Expanding Dry Run Functionality to Configuration Units(Province, District -#454 #464

--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -453,6 +453,7 @@ vcf-nav::part(label) {
 }
 
 vcf-nav-item::part(item) {
+	color: white !important;
 	border-inline-start: 2px solid transparent;
 }
 
